[gd_scene load_steps=10 format=2]

[ext_resource path="res://actor/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/level/Level 1.tscn" type="PackedScene" id=2]
[ext_resource path="res://bg/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/menu/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://health/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/menu/GameOverMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/World.gd" type="Script" id=7]
[ext_resource path="res://sound/medieval_loop.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "warning"
length = 1.6
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_colors/font_outline_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="World" type="Node"]
script = ExtResource( 7 )

[node name="Level" type="Node2D" parent="."]

[node name="Level1" parent="Level" instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UI" instance=ExtResource( 5 )]
margin_left = 24.0
margin_top = 16.0
margin_right = 324.0
margin_bottom = 46.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="PauseMenu" parent="UI" instance=ExtResource( 4 )]
visible = false

[node name="GameOverMenu" parent="UI" instance=ExtResource( 6 )]
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="UI"]
stream = ExtResource( 8 )
volume_db = 1.0
autoplay = true
attenuation = 0.0213444
area_mask = 0

[node name="Label" type="Label" parent="UI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -117.0
margin_bottom = -103.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "there are still enemies in this area"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Label"]
anims/warning = SubResource( 1 )
